--- a/table.css
+++ b/table.css
@@ -4,21 +4,25 @@ body{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 100vh;
+    height: 800px;
     background-color: #2f352f28;
     padding: 30px;
     margin: 0;
 }
 
 table {
-    margin: 0 auto;
-    border-collapse: collapse;
+   
+    border-color: white;
+    border-radius: 10px;
+    overflow: hidden;
+    
+
     width: 60%;
     max-width: 600px;
 
  
 }
-th, td {
+th{
     border: 1px solid #0000002a;
     padding: 15px;
     text-align: center;
